--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     url = 'https://script.google.com/macros/s/AKfycbyu-o4jkTVMr2PfEtFCNApnm5W7O2SdP1whu5CmwJNZpwrNM4i_CIEFqmsRj_rOpCYwtQ/exec'
 
 $('#submit-form').on('click', function(e) {
-  console.log($form)
+
+    console.log($form)
   e.preventDefault();
   var jqxhr = $.ajax({
     url: url,
@@ -304,7 +305,20 @@ $('#submit-form').on('click', function(e) {
         </div>
 
 </div><script src="../d3e54v103j8qbb.cloudfront.net/js/jquery-3.5.1.min.dc5e7f18c8bae5.js?site=5ffd8067a114a032408a3419" type="text/javascript" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script><script src="../assets.website-files.com/5ffd8067a114a032408a3419/js/webflow.6b4622a60.js" type="text/javascript"></script><!--[if lte IE 9]><script src="//cdnjs.cloudflare.com/ajax/libs/placeholders/3.0.2/placeholders.min.js"></script><![endif]-->
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
+<script>
+    const scriptURL = 'https://script.google.com/macros/s/AKfycbyu-o4jkTVMr2PfEtFCNApnm5W7O2SdP1whu5CmwJNZpwrNM4i_CIEFqmsRj_rOpCYwtQ/exec'
+    const form = document.forms['email-form-2']
   
+    form.addEventListener('submit', e => {
+      e.preventDefault()
+      fetch(scriptURL, { method: 'POST', body: new FormData(form)})
+        .then(response => console.log('Success!', response))
+        .catch(error => console.error('Error!', error.message))
+    })
+  </script>
+
   </body>
 
 </html>
