--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
           <p class="category-description">Exclusive offers on premium cottages @ Village Naukuchiyatal. The location is 5 km from Bhimtal, Uttarakhand </p>
         </div>
         <div class="details-link">
-          <div style="color:#0B5787" class="link-text">view travel deals</div>
+          <div style="color:#0B5787" class="link-text">interested</div>
           <div style="height:3px" class="details-link-hover"></div></div></a>
       </div>
   
@@ -124,7 +124,7 @@
               <p class="category-description">Resort in Coorg, Madikeri A luxury offering near the banks of Mother Cauvery, abodes those subtleties of nature which the heart longs for. Nestled in the midst of a dense jungle, this is a place where spirits remain untainted and wilted life springs up again.</p>
             </div>
             <div class="details-link">
-              <div style="color:#0B5787" class="link-text">view travel deals</div>
+              <div style="color:#0B5787" class="link-text">interested</div>
               <div style="height:3px" class="details-link-hover"></div></div></a>
           </div>
           <div id="w-node-_4ca65166-dd18-5a12-3487-16dd8a28297b-816e9b11" role="listitem" class="collection-item w-dyn-item">
@@ -139,58 +139,41 @@
               <div class="card-info">
                 <h3 class="heading-h3">Kipling Jungle Lodge</h3>
                 <div class="dynamic-trips-number-intro">
-                  <div class="trips-number-text">Ranthambore,Sawai Madhopur, Rajasthan</div>
+                  <div class="trips-number-text">Ranthambore, Sawai Madhopur, Rajasthan</div>
                   <!-- <div class="separator pink"></div>
                   <div class="trips-number">6</div> -->
                 </div>
                   <p class="category-description">Kipling Lodge has rooms that are perfectly designed and crafted as per the taste of guests to make their stay relaxed and comfortable. Guest should make it a point to visit the famous tourist places in and around while their stay at the hotel like Jogi Mahal(9.9km), Ganesh Temple(10km), Padam Talab(10km), Ranthambore National Park(4km), Chauth Mata Temple(17.6km) and many more.</p>
                 </div>
                 <div class="details-link">
-                  <div style="color:#0B5787" class="link-text">view travel deals</div>
+                  <div style="color:#0B5787" class="link-text">interested</div>
                   <div style="height:3px" class="details-link-hover"></div></div></a>
               </div>
 
               <div id="w-node-_4ca65166-dd18-5a12-3487-16dd8a28297b-816e9b11" role="listitem" class="collection-item w-dyn-item">
                 <a data-w-id="612ec2df-d0bc-ecd7-b44d-7200eeb8e49b" href="#contact" class="card w-inline-block">
-                  <div class="categories-bg"><div class="dynamic-starting-price-intro">
+                  <div class="categories-bg">
+                      <!-- <div class="dynamic-starting-price-intro">
                     <div class="separator pink"></div>
-                    <div class="starting-price">$ 1299 USD Onwards</div></div>
+                    <div class="starting-price">$ 1299 USD Onwards</div>
+                </div> -->
                   </div>
-                  <div style="background-image:url(https://assets.website-files.com/5ffda4cd9a632502ce06ccc1/5ffe6ed5c34c36730a4313dc_%5B6%5Dthumb_category_1.jpg)" class="thumbnail">
+                  <div style="background-image:url(./images/the-tigress-resort-spa.jpg)" class="thumbnail">
                   </div>
                   <div class="card-info">
-                    <h3 class="heading-h3">North America</h3>
+                    <h3 class="heading-h3">The Tigress Resort </h3>
                     <div class="dynamic-trips-number-intro">
-                      <div class="trips-number-text">Upcoming Trips</div>
-                      <div class="separator pink"></div>
-                      <div class="trips-number">6</div></div>
-                      <p class="category-description">Vestibulum sit amet odio id turpis ultricies dictum. Vivamus tristique elit quis metus lobortis, quis ullamcorper tortor maximus. In arcu velit, bibendum...</p>
+                      <div class="trips-number-text">Ranthambore, Sawai Madhopur, Rajasthan</div>
+                      <!-- <div class="separator pink"></div>
+                      <div class="trips-number">6</div> -->
+                    </div>
+                      <p class="category-description">A premium resort adjacent to the Ranthambhore National Park, The Tigress Resort Ranthambhore is a magnificent luxury in the lap of the wildlife sanctuary. Ranthambore wildlife sanctuary is known for its tigers and is one of the best places in India to see these animals in their natural jungle habitat. Explore wilderness and luxury at this all-suite destination resort in Ranthambhore.</p>
                     </div>
                     <div class="details-link">
-                      <div style="color:#0B5787" class="link-text">view travel deals</div>
+                      <div style="color:#0B5787" class="link-text">interested</div>
                       <div style="height:3px" class="details-link-hover"></div></div></a>
                   </div>
 
-                  <div id="w-node-_4ca65166-dd18-5a12-3487-16dd8a28297b-816e9b11" role="listitem" class="collection-item w-dyn-item">
-                    <a data-w-id="612ec2df-d0bc-ecd7-b44d-7200eeb8e49b" href="#contact" class="card w-inline-block">
-                      <div class="categories-bg"><div class="dynamic-starting-price-intro">
-                        <div class="separator pink"></div>
-                        <div class="starting-price">$ 1299 USD Onwards</div></div>
-                      </div>
-                      <div style="background-image:url(https://assets.website-files.com/5ffda4cd9a632502ce06ccc1/5ffe6ed5c34c36730a4313dc_%5B6%5Dthumb_category_1.jpg)" class="thumbnail">
-                      </div>
-                      <div class="card-info">
-                        <h3 class="heading-h3">North America</h3>
-                        <div class="dynamic-trips-number-intro">
-                          <div class="trips-number-text">Upcoming Trips</div>
-                          <div class="separator pink"></div>
-                          <div class="trips-number">6</div></div>
-                          <p class="category-description">Vestibulum sit amet odio id turpis ultricies dictum. Vivamus tristique elit quis metus lobortis, quis ullamcorper tortor maximus. In arcu velit, bibendum...</p>
-                        </div>
-                        <div class="details-link">
-                          <div style="color:#0B5787" class="link-text">view travel deals</div>
-                          <div style="height:3px" class="details-link-hover"></div></div></a>
-                      </div>
 </div></div></div>
 
 
