--- a/index.html
+++ b/index.html
@@ -332,7 +332,17 @@
         .catch(error => console.error('Error!', error.message))
     })
   </script>
+<script src="https://min30327.github.io/luxy.js/dist/js/luxy.js"></script>
+        <script charset="utf-8">
+            var isMobile = /iPhone|iPad|Android/i.test(navigator.userAgent);
+            if (!isMobile) {
+                luxy.init({
+                    wrapper: '#luxy',
+                    wrapperSpeed: 0.065,
 
+                });
+            }
+        </script>
   </body>
 
 </html>
